Feats: Usuários podem visualizar recursos das propriedades, e gerentes podem editar.